@@ -5,4 +5,5 @@
 
 # Alex Alexander (wired) <alex.alexander@gmail.com> (25 Apr 2009)
 # Masked nvidia-drivers 190.16 because it fails miserably
+# with some nvidia models
 ~x11-drivers/nvidia-drivers-190.16
