@@ -36,5 +36,5 @@ EBUILD nvidia-drivers-185.18.10.ebuild 16781 RMD160 ccd723a3c72e4692286098efe253
 EBUILD nvidia-drivers-185.18.14-r1.ebuild 16781 RMD160 ccd723a3c72e4692286098efe253a5e5454bd910 SHA1 5aaae22f5cc8dff60f14e6a235429b1db0d20dcc SHA256 5bf08d23ae52bd6703847e7a861709c7fad5c5c29309677707b918ab79f052f1
 EBUILD nvidia-drivers-185.18.14.ebuild 15200 RMD160 d7feae2ff057517af277d0fd05f5ebdc73769736 SHA1 24c05f862a215341a8932851bd7a6cb27cf71f7d SHA256 995ec5d827d3a325ad8966951c29f158fd9e43ae50669c8ee0c467d17b16248e
 EBUILD nvidia-drivers-185.19.ebuild 16781 RMD160 ccd723a3c72e4692286098efe253a5e5454bd910 SHA1 5aaae22f5cc8dff60f14e6a235429b1db0d20dcc SHA256 5bf08d23ae52bd6703847e7a861709c7fad5c5c29309677707b918ab79f052f1
-EBUILD nvidia-drivers-190.16.ebuild 17335 RMD160 f8df2b3dbcff6d3baec666e012095af573b04020 SHA1 dbb1cf764b4a283059d07ee4489d0e2d542b7a9b SHA256 c1a487aee928a5bdd8438881e3eeb6176a28b4f42c1d66c825c5758e8aeb57f3
-MISC ChangeLog 2273 RMD160 9e6d4ee1a9fd71ae46615609bcb2d832051438d3 SHA1 fcbce25ec60a793ea89047677134dee96197145c SHA256 b6213dd40801a32513f7ae4031a92a6766131540c36d251c62605915e060edcf
+EBUILD nvidia-drivers-190.16.ebuild 17332 RMD160 3695b903e5a82b3d3aca3431007e00b0559e20c0 SHA1 d7a536bdffec29bcab17c1d86588271b2fdefd46 SHA256 cfb0fb31e72e050849fbdb622612382918b091a0ac625335ae1aba1c0d1db5de
+MISC ChangeLog 2376 RMD160 1acd9b51266864e7f1e70b428f914675fa84affb SHA1 9ba622e11e07b52369036015e25b6d7f55fefc96 SHA256 8a796b5dc239c738579318c2bfbf60cdebec64b45bb4fb71393b95d75099580b
