@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Jul 2009; Alex Alexander <wired@gentoo.org>
+  nvidia-drivers-190.16.ebuild:
+  fixed ewarns a bit
+
 *nvidia-drivers-185.18.14 (30 May 2009)
 
   30 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
